--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -33,12 +33,21 @@ img {
 .topnav {
   overflow: hidden;
   margin: 3.5%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .header-logo {
     float: left;
+    width: 30%;
+}
+.header-logo img {
+  width: 100%;
 }
 .main-navbar {
     float: right;
+    display: flex;
+    justify-content: flex-end;
 }
 .topnav a {
   float: left;
@@ -48,7 +57,7 @@ img {
   padding: 12px 12px;
   margin: 5px;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 16px;
   font-family: Roboto, sans-serif;
 }
 
@@ -73,6 +82,7 @@ img {
   .topnav a.icon {
     float: right;
     display: block;
+    margin-top: -15px;
   }
 }
 
@@ -102,7 +112,8 @@ img {
 } 
 
 main {
-  font-size: 130%;
+  height: 800px;
+  font-size: 1.5rem;
   font-weight: bolder;
   color: black;
   padding-top: 0.5vw;
@@ -347,52 +358,28 @@ input[data-error]::after {
   background-color: #fff;
 }
 
-/* The snackbar - position it at the bottom and in the middle of the screen */
+/* Snackbar positionné centré en bas de l'écran caché par défaut */
 #snackbar {
-  visibility: hidden; /* Hidden by default. Visible on click */
-  min-width: 250px; /* Set a default minimum width */
-  margin-left: -150px; /* Divide value of min-width by 2 */
-  background-color: #2fbd03; /* Green background color */
-  color: #000000; /* White text color */
-  text-align: center; /* Centered text */
-  border-radius: 20px; /* Rounded borders */
-  padding: 16px; /* Padding */
-  position: fixed; /* Sit on top of the screen */
-  z-index: 1; /* Add a z-index if needed */
-  left: 50%; /* Center the snackbar */
-  bottom: 30px; /* 30px from the bottom */
+  visibility: hidden; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: #232323; 
+  color: #aaaaaa; 
+  text-align: center;  
+  position: fixed; 
+  z-index: -100; 
 }
 
-/* Show the snackbar when clicking on a button (class added with JavaScript) */
+/* Snackbar visible au clic (class.show ajoutée avec JavaScript) */
 #snackbar.show {
-  visibility: visible; /* Show the snackbar */
-  /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
-  However, delay the fade out process for 2.5 seconds */
-  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  visibility: visible;
+  z-index: 1000; 
 }
-
-/* Animations to fade the snackbar in and out */
-@-webkit-keyframes fadein {
-  from {bottom: 0; opacity: 0;}
-  to {bottom: 30px; opacity: 1;}
-}
-
-@keyframes fadein {
-  from {bottom: 0; opacity: 0;}
-  to {bottom: 30px; opacity: 1;}
-}
-
-@-webkit-keyframes fadeout {
-  from {bottom: 30px; opacity: 1;}
-  to {bottom: 0; opacity: 0;}
-}
-
-@keyframes fadeout {
-  from {bottom: 30px; opacity: 1;}
-  to {bottom: 0; opacity: 0;}
-}
-
 
 /* Style the arrow inside the select element: */
 .select-selected:after {
@@ -451,7 +438,7 @@ input[data-error]::after {
   font-size: 16px;
 }
 .hero-section {
-  min-height: 93vh;
+  min-height: 600px;
   border-radius: 10px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -460,15 +447,14 @@ input[data-error]::after {
   margin-bottom: 10px;
 }
 .hero-content {
-  padding: 51px 67px;
+  padding: 51px 25%;
   grid-column: span 4;
   background: #232323;
   color: #fff;
-  position: relative;
   text-align: left;
   min-width: 424px;
 }
-.hero-content::after {
+/*.hero-content::after {
   content: "";
   width: 100%;
   height: 100%;
@@ -476,18 +462,20 @@ input[data-error]::after {
   position: absolute;
   right: -80px;
   top: 0;
-}
+}*/
 .hero-content > * {
   position: relative;
   z-index: 1;
 }
 .hero-headline {
-  font-size: 6rem;
+  width: 700px;
+  margin-top: 50px;
+  font-size: 4.9rem;
   font-weight: normal;
-  white-space: nowrap;
+  white-space: wrap;
 }
 .hero-text {
-  width: 146%;
+  width: 100%;
   font-weight: normal;
   margin-top: 57px;
   padding: 0;
@@ -507,6 +495,8 @@ input[data-error]::after {
   width: 100%;
   height: 100%;
   display: block;
+  object-fit: fill;
+  
   padding: 0;
 }
 .copyrights {
@@ -524,19 +514,40 @@ footer {
   padding-right: 2vw;
   margin: 0 20px;
 }
+@media screen and (max-width: 1000px) {
+  main {
+    height: 600px;
+  }
+  .topnav {
+    flex-wrap: wrap;
+    
+  }
+  .main-navbar {
+    margin-top: 30px;
+    width: 100%;
+    justify-content: center;
+  }
+  h1.hero-headline{
+    margin-top: 0px;
+    
+  }
+}
+
 @media screen and (max-width: 800px) {
+  main {
+    height: 1100px;
+  }
   .hero-section {
     display: block;
     box-shadow: unset;
   }
   .hero-content {
+    min-width: 200px;
     background: #fff;
     color: #000;
     padding: 20px;
   }
-  .hero-content::after {
-    content: unset;
-  }
+  
   .hero-content .btn-signup {
     display: none;
   }
@@ -547,6 +558,7 @@ footer {
   .hero-text {
     width: unset;
     font-size: 1.5rem;
+    margin-top: 20px;
   }
   .hero-img img {
     border-radius: 10px;
@@ -560,6 +572,59 @@ footer {
   .copyrights {
     margin-top: 50px;
     text-align: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header-logo {
+    float: left;
+    width: 50%;
+}
+  .main-navbar {
+    margin-top: 30px;
+    width: 50%;
+    flex-direction: column;
+  }
+  #burger{
+    position: absolute;
+    right: 15px;
+    top: 15px;
+  }
+  
+  main {
+    max-height: 900px;
+    margin: 0px;
+  }
+  .hero-content {
+    padding: 5px;
+  }
+  .hero-headline {
+    margin-top: 0px;
+    font-size: 2.5rem;
+    width: 100%;
+  }
+  .hero-text {
+    font-size: 1.2rem;
+    margin-top: 10px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  main {
+    max-height: 800px;
+    margin: 0px;
+  }
+  .hero-content {
+    padding: 5px;
+  }
+  .hero-headline {
+    margin-top: 0px;
+    font-size: 2.5rem;
+  }
+  .hero-text {
+    font-size: 1.2rem;
+    margin-top: 10px;
   }
 }
 
